# cfa-vaccination-coverage-forecasting

./: .gitignore  Makefile  Snakefile  assets.py  dodo.py  make.py  mise.toml  pyproject.toml
scripts/: config_full.yaml  config_vignette.yaml  eval.py  get_forecast_dates.py  plot_scores.py  preprocess.py
vcf/: __init__.py
vcf/defs/: assets.py
