[project]
name = "vcf"
version = "0.2.1"
description = ""
authors = [
    { name = "Scott Olesen", email = "ulp7@cdc.gov" },
    { name = "Edward Schrom", email = "tec0@cdc.gov" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "polars>=1.7.1,<2",
    "numpy>=2.1.1,<3",
    "scikit-learn>=1.5.2,<2",
    "altair>=5.4.1,<6",
    "vl-convert-python>=1.7.0,<2",
    "pyyaml>=6.0.2,<7",
    "pytest>=9.0.3,<10",
    "numpyro>=0.16.1,<0.17",
    "jax>=0.5.0,<0.6",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.3"]
mkdocs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]
